--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,17 +1,20 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Home</ion-title>
+    <ion-title>Desafio 21 dias</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+  <h1 class="complains-number"
+      text-center
+     [style.color]="getColor()">{{complains}}</h1>
 </ion-content>
+<ion-footer no-shadow>
+	<ion-toolbar position="bottom">
+    <button ion-button
+            block
+            large
+            color="danger"
+            (click)="complain()">Reclamei</button>
+	</ion-toolbar>
+</ion-footer>
