--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,3 +1,4 @@
 <ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
+  <ion-tab [root]="tab1Root" tabTitle="Home"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="Métricas"></ion-tab>
 </ion-tabs>
